<resources>
    <string name="kTabBarNameMarkets">Markets</string>
    <string name="kTabBarNameCollateral">Margin</string>
    <string name="kTabBarNameMiner">Mining</string>
    <string name="kTabBarNameServices">Services</string>
    <string name="kTabBarNameMy">My</string>
    <string name="kLable24HVol">24HVol</string>
    <string name="kLabelMarketFavorites">Favorites</string>
    <string name="kLabelGroupNameMain">Main</string>
    <string name="kLabelGroupNameOTC">Stablecoin</string>
    <string name="kLabelGroupNamePerpetual">Perpetual</string>
    <string name="kLabelGroupNameCommunity">Community</string>
    <string name="kLabelGroupNameMinerZone">Mining Area</string>
    <string name="kLabelGroupNameDEX">DEX(Gateway)</string>
    <string name="kLabelGroupNameGDEX">GDEX(Gateway)</string>
    <string name="kLabelGroupNameWWW">WWW(Gateway)</string>
    <string name="kLabelGroupNameOPEN">OPEN(Gateway)</string>
    <string name="kLabelGroupNameWIN">WIN(Gateway)</string>
    <string name="kLabelGroupNameOther">Other</string>
    <string name="kLabelGroupIntroduction">Introduction &gt;</string>
    <string name="kLabelMarketNameFutures">Futures</string>
    <string name="kLabelNoFavMarket">You have not added any favorites market.</string>
    <string name="kLabelBtnNameAddPair">Add</string>
    <string name="kLabelTitleAssetQuote">Quote</string>
    <string name="kLabelTitleAssetBase">Base</string>
    <string name="kVcMyPairSubmitTipMissQuoteAsset">Please select the quote asset.</string>
    <string name="kVcMyPairSubmitTipMissBaseAsset">Please select the base asset.</string>
    <string name="kVcMyPairSubmitTipQuoteBaseIsSame">Quote asset and base asset cannot be the same.</string>
    <string name="kVcMyPairSubmitTipPairIsAlreadyExist">The pair already exists.</string>
    <string name="kDebtLableReset">Reset</string>
    <string name="kDebtLableSelectAsset">Select asset</string>
    <string name="kDebtLableFeedPrice">Feed price</string>
    <string name="kDebtLableCallPrice">Call price</string>
    <string name="kDebtLablePayMaxDebt">Pay Debt</string>
    <string name="kDebtLableUseMax">All</string>
    <string name="kDebtLableAvailable">Available</string>
    <string name="kDebtLableRatio">Ratio</string>
    <string name="kDebtLableUpdatePosition">Update position</string>
    <string name="kDebtLableLogin">Login</string>
    <string name="kDebtLabelCellTitleDebtValue">Debt</string>
    <string name="kDebtLabelCellTitleCollAmount">Margin</string>
    <string name="kDebtTipSelectDebtAsset">Please select the asset to borrow</string>
    <string name="kDebtTipInputDebtValue">Please input debt value</string>
    <string name="kDebtTipInputCollAmount">Please input collateral amount</string>
    <string name="kDebtTipPleaseInputDebtValueFirst">Please enter the debt value first.</string>
    <string name="kDebtTipPleaseAdjustRatioFirst">Please adjust the ratio first.</string>
    <string name="kDebtTipTargetRatioNotSet">Target ratio not set</string>
    <string name="kDebtTipTargetRatio">Target ratio</string>
    <string name="kDebtTipTitleFeedAndCallPrice">Feed &amp; Call price</string>
    <string name="kDebtTipTitleWhatIsRatio">What is the ratio?</string>
    <string name="kDebtTipTitleWhatIsTargetRatio">What is the target ratio?</string>
    <string name="kDebtTipNetworkErrorPleaseRefresh">The network is abnormal. Please refresh the interface again.</string>
    <string name="kDebtTipAssetHasGlobalSettled">The asset has been global settled and cannot update position.</string>
    <string name="kDebtTipAssetNoValidFeedData">The asset has no feed data and and cannot update position </string>
    <string name="kDebtTipCollRatioCannotLessThanMCR">The ratio cannot be lower than %s.</string>
    <string name="kDebtTipCannotAdjustMoreLowerRatio">You are already in a forced sale and you cannot reduce the ratio.</string>
    <string name="kDebtTipValueAndAmountNotChange">The amount of borrowings and collateral did not change.</string>
    <string name="kDebtTipCollNotEnough">The collateral balance is insufficient.</string>
    <string name="kDebtTipAvailableNotEnough">%s balance is insufficient, please adjust the amount of repayment.</string>
    <string name="kDebtTipRatioTooLow">The ratio is lower than %s and you cannot borrow more.</string>
    <string name="kDebtTipTxUpdatePositionFullOK">Update position successfully.</string>
    <string name="kDebtTipTxUpdatePositionOK">Update position successfully, but the refresh failed. Please try again later.</string>
    <string name="kDebtWarmTips">[Tips]\n1. When the feed price drops to the call price, the system will automatically sell your collateral assets for debt repayment. Please pay attention to adjusting the ratio control risks. \n2. When the debt field is locked, the ratio will change with the collateral. \n3. When the ratio field is locked, the debt will change with the collateral.</string>
    <string name="kDebtWarmTipsForPM">[Tips] \nThe current asset is a predicted market asset. The amount of borrowing and collateral is constant at 1: 1.</string>
    <string name="kMinerSecTitleMiner">NBS mining</string>
    <string name="kMinerSecTitleScny">nbCNY mining</string>
    <string name="kMinerSecTitleShare">Share mining</string>
    <string name="kMinerCellLabelMinerMining">Mining</string>
    <string name="kMinerCellLabelScnyMining">Mining</string>
    <string name="kMinerCellLabelMinerExit">Exit mining</string>
    <string name="kMinerCellLabelScnyExit">Exit mining</string>
    <string name="kMinerCellLabelDataMiner">MINER mining data</string>
    <string name="kMinerCellLabelDataScny">SCNY mining data</string>
    <string name="kMinerCellLabelNbsLock">Stake mining</string>
    <string name="kMinerCellLabelCnyLock">Stake mining</string>
    <string name="kMinerCellLabelMyLockList">My Stake Position</string>
    <string name="kMinerCellLabelShareLink">Share link</string>
    <string name="kMinerCellClickTipsDontSupportedFeature">This feature is not open.</string>
    <string name="kMinerCellClickTipsInvalidAuthToken">The current account login status is invalid, please log in again.</string>
    <string name="kMinerSharesDataNoAnyShares">No data</string>
    <string name="kMinerSharesDataShareItemsTitle">My share</string>
    <string name="kMinerNBSMiningRewardTitle">MINER mining revenue</string>
    <string name="kMinerNBSShareMiningRewardTitle">MINER shares revenue</string>
    <string name="kMinerCNYMiningRewardTitle">SCNY mining revenue</string>
    <string name="kMinerCNYShareMiningRewardTitle">SCNY shares revenue</string>
    <string name="kMinerTotalInviteAccountTitle">Total shares %s accounts</string>
    <string name="kMinerTotalInviteAmountTitle">Total shares %s %s</string>
    <string name="kMinerApiErrServerOrNetwork">The mining data server or network is abnormal. Please try again later.</string>
    <string name="kMinerApiErrNotSupportedMultiAccount">Multi-signature accounts do not support viewing mining data.</string>
    <string name="kMinerValidHoldAmountTipsMINER">(1) Referrer locked position no less than %s NBS (including MINER and regular lock position). \n(2) The holdings of NBS locked position by referrer must more than the recommended account; otherwise, the margin will not be included in the valid invitation holdings.</string>
    <string name="kMinerValidHoldAmountTipsSCNY">(1) You need to hold no less than %s SCNY. \n(2) The number of SCNY holdings by yourself must more than the recommended account; otherwise, the margin will not be included in the valid invitation holdings.</string>
    <string name="kMinerMiningRewardTipsMINER">All NBS accounts of locked position (including periodic locked position and MINER) are equally allocated %s NCN from pool output per day based on the amount holdings.</string>
    <string name="kMinerMiningRewardTipsSCNY">All SCNY holding accounts are equally allocated %s NCN from pool output per day based on the amount holdings.</string>
    <string name="kMinerShareRewardTipsMINER">The recommended daily revenue of locked position mining is: (valid invitation holdings) × %s%%.</string>
    <string name="kMinerShareRewardTipsSCNY">The recommended daily revenue from mortgage mining is: (valid invitation holdings) x %s%%.</string>
    <string name="kServicesCellLabelQrScan">Scan QR code</string>
    <string name="kServicesCellLabelTransfer">Transfer</string>
    <string name="kServicesCellLabelAccountSearch">Account search</string>
    <string name="kServicesCellLabelRank">Rank</string>
    <string name="kServicesCellLabelVoting">Voting</string>
    <string name="kServicesCellLabelSmartCoin">Smartcoin</string>
    <string name="kServicesCellLabelFeedPrice">Feed price details</string>
    <string name="kServicesCellLabelOtcUser">OTC</string>
    <string name="kServicesCellLabelOtcMerchant">Merchant</string>
    <string name="kServicesCellLabelDepositWithdraw">Deposit &amp; Withdraw</string>
    <string name="kServicesCellLabelAdvFunction">Advanced Features</string>
    <string name="kServicesCellLabelBtsExplorer">Explorer</string>
    <string name="kVcScanPermissionNoCamera">Your camera is not detected.</string>
    <string name="kVcScanPermissionSystemLimit">The album could not be accessed for system reasons.</string>
    <string name="kVcScanPermissionGotoSetting">Please go to the settings interface to allow the app to access the camera.</string>
    <string name="kVcScanPermissionUserRejected">This feature is not supported without camera permissions.</string>
    <string name="kVcScanAlbumClickedTips">Select QR code image</string>
    <string name="kVcScanNaviTitleRightAlbum">Album</string>
    <string name="kVcScanAutoScanTips">Put the QR code inside the border.</string>
    <string name="kVcScanProcessingResult">Processing…</string>
    <string name="kVcScanNoQrCode">No QR code found.</string>
    <string name="kVcScanResultPriKeyTypeTitle">Key type</string>
    <string name="kVcScanResultPriKeyTypeOwner">Owner</string>
    <string name="kVcScanResultPriKeyTypeActive">Active</string>
    <string name="kVcScanResultPriKeyTypeMemo">Memo</string>
    <string name="kBotsCellLabelPriceRangeTitle">Price range</string>
    <string name="kBotsCellLabelGridNAndOrderAmount">Grid &amp; order amount</string>
    <string name="kBotsCellLabelTotalArbitrageAmount">Arbitrage amount</string>
    <string name="kBotsCellLabelArbitrageAndTradeNum">Arbitrage &amp; Trading</string>
    <string name="kBotsCellLabelProfit">Profit</string>
    <string name="kBotsCellLabelApy">APY</string>
    <string name="kBotsCreateCellTitleMinPrice">Min price</string>
    <string name="kBotsCreateCellTitleMaxPrice">Max price</string>
    <string name="kBotsCreateCellTitleGridN">Grid number</string>
    <string name="kBotsCreateCellTitleAmountPerGrid">Amount</string>
    <string name="kBotsCreateCellTitleQuoteAsset">Quote</string>
    <string name="kBotsCreateCellTitleBaseAsset">Base</string>
    <string name="kBotsCreateCellPlaceHolderMinPrice">Please input min price</string>
    <string name="kBotsCreateCellPlaceHolderMaxPrice">Please input max price</string>
    <string name="kBotsCreateCellPlaceHolderGridN">Please input grid number</string>
    <string name="kBotsCreateCellPlaceHolderAmountPerGrid">Please input amount per grid</string>
    <string name="kBotsCreateCellPlaceHolderQuote">Please select quote asset</string>
    <string name="kBotsCreateCellPlaceHolderBase">Please select base asset</string>
    <string name="kBotsCreateSubmitButton">Create</string>
    <string name="kBotsCreateUiTipsMsg">[Reminder]\nSet the grid order parameters.\n\n Note: Because running multiple grids at the same time may affect the calculation of grid revenue, it is recommended to use a separate account to run the grid, and one account should not run multiple grids at the same time.</string>
    <string name="kVcTitleCreateGridBots">Create grid order</string>
    <string name="kBtnBack">Back</string>
</resources>