<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:orientation="vertical">

    <!-- 第一行 网格交易对名称以及状态等 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">

        <!-- 左 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pair_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:gravity="center_vertical|left"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/theme01.textColorMain"
                android:text=""/>

            <TextView
                android:id="@+id/tv_status_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingTop="1dp"
                android:paddingRight="4dp"
                android:paddingBottom="1dp"
                android:gravity="center_vertical"
                android:textSize="12dp"
                android:textColor="@color/theme01.textColorFlag"
                android:background="@drawable/flag_settlement"
                android:text=""/>
        </LinearLayout>

    </FrameLayout>

    <!-- 第二行：标题 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <!-- 左 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorGray"
            android:text="@string/kBotsCellLabelPriceRangeTitle"/>
        <!-- 中 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorGray"
            android:text="@string/kBotsCellLabelGridNAndOrderAmount"/>
        <!-- 右 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorGray"
            android:text="@string/kBotsCellLabelArbitrageAndTradeNum"/>
    </FrameLayout>

    <!-- 第三行：第一排属性值 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <!-- 左 -->
        <TextView
            android:id="@+id/tv_price_range"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorNormal"
            android:text=""/>
        <!-- 中 -->
        <TextView
            android:id="@+id/tv_grid_n_and_amount_per_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorNormal"
            android:text=""/>
        <!-- 右 -->
        <TextView
            android:id="@+id/tv_trade_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorNormal"
            android:text=""/>
    </FrameLayout>

    <!-- 第四行：标题 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <!-- 左 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorGray"
            android:text="@string/kBotsCellLabelTotalArbitrageAmount"/>
        <!-- 中 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorGray"
            android:text="@string/kBotsCellLabelProfit"/>
        <!-- 右 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorGray"
            android:text="@string/kBotsCellLabelApy"/>
    </FrameLayout>

    <!-- 第五行：第二排属性值 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <!-- 左 -->
        <TextView
            android:id="@+id/tv_total_arbitrage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorNormal"
            android:text=""/>
        <!-- 中 -->
        <TextView
            android:id="@+id/tv_profit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorNormal"
            android:text=""/>
        <!-- 右 -->
        <TextView
            android:id="@+id/tv_apy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorNormal"
            android:text=""/>
    </FrameLayout>

    <!-- 第六行 描述信息（可能不存在） -->
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:textSize="12dp"
        android:textColor="@color/theme01.textColorMain"
        android:text=""/>
        
    <!-- 分割线 -->
    <View android:layout_height="1px" android:background="@color/theme01.bottomLineColor" android:layout_marginTop="4dp" android:layout_width="fill_parent"></View>

</LinearLayout>